# Gitify

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/src/: main.rs
src/components/: ActivityFeed.tsx  Sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/lib/: auth.ts  forge.ts  settings.tsx  view.ts
src/screens/: Board.tsx  Connect.tsx  IssueDetail.tsx  IssueList.tsx  NewIssueDialog.tsx  Settings.tsx
src/state/: connection.tsx
src/tui/: App.tsx  IssueDetail.tsx  IssueList.tsx  MentionInput.tsx  ScrollList.tsx  Sidebar.tsx  creds.ts  index.tsx  useAsync.ts  useTerminalSize.ts
