[package]
name = "gitify"
version = "0.1.0"
description = "Cross-platform issue & project management for Forgejo/Gitea"
edition = "2021"

[lib]
name = "gitify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
